# axolotl

./: .axolotl-complete.bash  .bandit  .coderabbit.yaml  .coveragerc  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .isort.cfg  .mypy.ini  .nojekyll  .pre-commit-config.yaml  .pylintrc  1991.yml  =0.1.4  AGENTS.md  AGENTS_DPO.md  AGENTS_SFT.md  ATTN_REFACTOR_REVIEW.md  CHECKIN_GUIDE.md  CITATION.cff  CNAME  DEEPEP_SETUP.md  Dockerfile  ENVIRONMENT_SETUP.md  FAQS.html  FAQS.md  MANIFEST.in  Makefile  README.md  TODO.html  TODO.md  VERSION  _publish.yml  _quarto.yml  _sidebar.yml  adopt.py  alpaca-fr.jsonl  (+53 more)
.agents/skills/: README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yml  docs.yml  feature-request.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template_simple.md
.github/workflows/: base.yml  beta.yml  debug-commit-message.yml  docker-e2e.yml  docs.yml  e2e.yml  lint.yml  main.yml  mcp-tests.yml  multi-gpu-e2e.yml  nightlies.yml  pre-commit.yml  precommit-autoupdate.yml  pypi.yml  (+5 more)
.runpod/: .gitignore  Dockerfile  LICENSE  README.md  hub.json  requirements.txt  test-input.json  tests.json
.venv311/: pyvenv.cfg
api/: ConstantLengthDataset.qmd  TokenizedPromptDataset.qmd  choose_config.qmd  index.qmd  load_cfg.qmd  validate_config.qmd
baseten/: run.sh
benchmark/: dataloader.py
benchmarks/: bench_checkpoint_activation_offload.py  bench_entropy.py  bench_scattermoe_lora.py  bench_selective_logsoftmax.py  configs.py  conftest.py  nvfp4_qwen3_8b_qk_norm_rope_off.yaml  nvfp4_qwen3_8b_qk_norm_rope_on.yaml  test_attention.py  test_bench.py
cicd/: Dockerfile-uv.jinja  Dockerfile.jinja  cicd.sh  cicd_cuda_kernels.sh  cleanup.py  cleanup.sh  config.py  e2e_cuda_kernels.py  e2e_tests.py  multigpu.py  multigpu.sh  single_gpu.py  tests.py
configs/: cerebras_1_3B_alpaca.yml  galactica_1_3B.yml  gpt_neox_20b.yml  llama_13B_alpaca.yml  llama_65B_alpaca.yml  llama_7B_4bit.yml  llama_7B_alpaca.yml  llama_7B_jeopardy.yml  pythia_1_2B_alpaca.yml  quickstart.yml  sample.yml  stability_3b.yml  vicuna_13B_4bit_reflect.yml
data/: README.md
deepspeed/: zero1.json  zero2.json  zero3.json  zero3_cpu.json
deepspeed_configs/: zero1.json  zero1_torch_compile.json  zero2.json  zero2_torch_compile.json  zero3.json  zero3_bf16.json  zero3_bf16_cpuoffload_all.json  zero3_bf16_cpuoffload_params.json  zero3_cpuoffload.json
devtools/: README.md  cuda_sanity.py  dev_chat_template.yml  dev_llama3.yml  dev_sharegpt.yml  fire_test.py
docker/: Dockerfile  Dockerfile-base  Dockerfile-base-next  Dockerfile-base-nightly  Dockerfile-beta  Dockerfile-cloud  Dockerfile-cloud-no-tmux  Dockerfile-cloud-no-tmux-uv  Dockerfile-cloud-uv  Dockerfile-modal  Dockerfile-runpod  Dockerfile-tests  Dockerfile-uv  Dockerfile-uv-base
docs/: .gitignore  1_58bit_finetuning.html  1_58bit_finetuning.qmd  Distributed_Finetuning_Multi-Node.md  Distributed_Finetuning_Multi-Node.qmd  amd_hpc.html  amd_hpc.qmd  attention.html  attention.qmd  batch_inferencing.md  batch_vs_grad.html  batch_vs_grad.qmd  checkpoint_saving.html  checkpoint_saving.qmd  choosing_method.html  choosing_method.qmd  cli.html  cli.md  cli.qmd  config-reference.html  config-reference.qmd  config.html  config.qmd  custom_integrations.html  custom_integrations.qmd  dataset_loading.html  dataset_loading.qmd  dataset_preprocessing.html  dataset_preprocessing.qmd  debugging.html  debugging.md  debugging.qmd  docker.html  docker.qmd  ebft.html  ebft.qmd  evaluation.md  expert_quantization.html  expert_quantization.qmd  faq.html  (+88 more)
examples/: compare-adamw-pretrain.yml  compare-muon-pretrain.yml  nvfp4  qwen2-0.5b-muon-fsdp2.yml
gitbook/: README.md  SUMMARY.md  small-dev-details.md
mcp_servers/: README.md  __init__.py
mendel/: lora-8b.yml
model-out/: eval_summary.csv
reference/: index.qmd
scripts/: __init__.py  alpaca_json_to_jsonl.py  analyze_bethpage_descriptions.py  analyze_profile.py  analyze_token_usage.py  analyze_validation_mismatches.py  augment_bethpage_targets.py  augment_dataset.py  axolotl  backfill_template_descriptions.py  balance_bethpage_coverage.py  bench_gigatoken.py  bench_moe.py  bench_moe_sweep.py  bench_nvfp4.sh  bench_nvfp4_ce_kernel.py  bench_nvfp4_whole_step.py  bench_torchtitan_moe.py  bench_torchtitan_moe_sweep.py  benchmark.py  benchmark_multi_gpu.py  build_balanced_eval_split.py  build_enriched_multitask_dataset.py  build_scattermoe_lora_kernel.py  chat_datasets.py  check_nvfp4_resume.sh  clean_bethpage_dataset.py  cloud-entrypoint-term.sh  cloud-entrypoint.sh  convert_diff_transformer.py  convert_diffusiongemma_nvfp4_to_fused.py  create_simple_training_data.py  create_strategy_logic_dataset.py  cuda13_env.sh  cutcrossentropy_install.py  debug_qwen2_experts.py  dedupe_normalize_prompted.py  demo_stratified_windows.py  demo_weighted_iterable.py  evaluate_prompted_dataset.py  (+34 more)
src/: setuptools_axolotl_dynamic_dependencies.py
tests/: conftest.py  constants.py  hf_offline_utils.py  mm_packing_utils.py  test_agent_skill_layout.py  test_attn_implementation.py  test_batch_flattening.py  test_calculate_total_num_steps.py  test_center_rewards_coefficient.py  test_cfg_normalization.py  test_chunked_xentropy.py  test_cli.py  test_cli_integrations.py  test_config_validation.py  test_context_parallel_batch_size.py  test_convert.py  test_data.py  test_dataset_weight.py  test_datasets.py  test_dict.py  test_ebft_kernels.py  test_ebft_strided_structured.py  test_empty_tokenization.py  test_exact_deduplication.py  test_expand_mask.py  test_fp32_norms.py  test_freeze.py  test_fsdp_expert_cpu_offload_schema.py  test_glm_dsa_cp_validation.py  test_http_weight_sync.py  test_liger_upstream_sync_audit.py  test_loaders.py  test_logging_config_file_capture.py  test_lora.py  test_mm_chat_collator.py  test_mm_collator_warnings.py  test_mm_packing_collator.py  test_mm_packing_config.py  test_mm_packing_robustness.py  test_mm_pretokenize_masking.py  (+46 more)
ui/: main.py
(+2944 files in other folders)
