[metadata]
name = axolotl
version = 0.1.0
description = You know you're going to axolotl questions
author = Wing Lian
author_email = wing.lian@gmail.com
license = MIT

[options]
package_dir =
    =src
packages = find:
install_requires =
    transformers @ git+https://github.com/huggingface/transformers.git@main
    peft @ git+https://github.com/huggingface/peft.git@main
    attrdict
    fire
    PyYAML == 6.0
    black
    bitsandbytes
    datasets
    accelerate
    sentencepiece
    wandb
    flash-attn
    einops

[options.packages.find]
where = src

